tests/NormalTests/paczka1/fuzzy1/56690437.err
Error in line 1: dmoui9QYr4b A402 60,0
Error in line 6: A108 S600 35,7
Error in line 7: A108 A108 31,8
Error in line 8: sc8t6f7JLWJ A108 30,2
Error in line 27: Yrm S600 75,4
